--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@arcjet/inspect": "^1.0.0-beta.7",
+    "@arcjet/next": "^1.0.0-beta.7",
     "@clerk/nextjs": "^6.19.2",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.7.0",
